Fix CSS bug and align w. bootstrap

--- a/src/assets/css/kortgebyr.scss
+++ b/src/assets/css/kortgebyr.scss
@@ -10,12 +10,6 @@
     font-display: swap;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
     margin: 0;
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -50,7 +44,6 @@ header {
 footer {
     text-align: center;
     color: #444;
-    line-height: 23px;
     font-size: .92em;
     margin-top: .3rem;
     margin-bottom: 2rem;
@@ -60,9 +53,8 @@ nav {
     display: flex;
     align-items: center;
     border-bottom: 1px solid #dadada;
-    height: 40px;
     background: #f3f3f3;
-    padding: 0 1rem 0;
+    padding: 7px 1rem;
     box-sizing: border-box;
 }
 
@@ -72,8 +64,8 @@ nav {
     padding-left: 1rem;
     padding-right: 1rem;
     width: 100%;
-    max-width: 1100px;
-    min-width: 320px;
+    max-width: 69rem;
+    min-width: 20rem;
     box-sizing: border-box;
 }
 
@@ -96,11 +88,6 @@ nav {
     margin: .8em 0 .9em;
     border: 1px solid #dcdcdc;
     padding: .6rem .9rem .5rem;
-}
-
-input {
-    display: inline-block;
-    margin-right: 4px;
 }
 
 .settings {
@@ -128,14 +115,11 @@ input {
     user-select: none;
 }
 
-.form-input {
+.form-control {
     display: block;
     width: 100%;
-    margin: 0;
     padding: 0.375rem 0.75rem;
-    font-family: inherit;
     font-size: 1rem;
-
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
@@ -146,40 +130,32 @@ input {
     -moz-appearance: none;
     appearance: none;
     border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     box-sizing: border-box;
+    margin: 0;
+    font-family: inherit;
 
     &:focus {
         color: #212529;
         background-color: #fff;
         border-color: #86b7fe;
         outline: 0;
-        box-shadow: 0 0 0 .25rem rgba(13,110,253,.25)
-    }
-
-    &::-moz-placeholder {
-        color: #6c757d;
-        opacity: 1
-    }
-
-    &::placeholder {
-        color: #6c757d;
-        opacity: 1
+        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
     }
 }
-
 
 .input-group {
     position: relative;
     display: flex;
-    flex-wrap: nowrap;
-    box-sizing: border-box;
+    flex-wrap: wrap;
+    align-items: stretch;
+    width: 100%;
 }
 
 .input-group-text {
     display: flex;
     align-items: center;
-    padding: 0.375rem 0.6rem 0.375rem .7rem;
+    padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -188,7 +164,6 @@ input {
     white-space: nowrap;
     background-color: #e9ecef;
     border: 1px solid #ced4da;
-    border-right: 0;
     border-radius: 0.25rem;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
@@ -196,55 +171,20 @@ input {
 }
 
 .input-group-input {
-    display: block;
-    width: 100%;
-    margin: 0;
-    padding: 0.375rem 0.7rem;
-    font-family: inherit;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    border-radius: 0.25rem;
+    position: relative;
+    flex: 1 1 auto;
+    width: 1%;
+    min-width: 0;
+    margin-left: -1px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    box-sizing: border-box;
-
-    &:focus {
-        color: #212529;
-        background-color: #fff;
-        border-color: #86b7fe;
-        outline: 0;
-        box-shadow: 0 0 0 .25rem rgba(13,110,253,.25);
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
-
-    &::-moz-placeholder {
-        color: #6c757d;
-        opacity: 1
-    }
-
-    &::placeholder {
-        color: #6c757d;
-        opacity: 1
-    }
 }
 
 .form-select {
     display: block;
     width: 100%;
-    margin: 0;
-    padding: 0.375rem 2.25rem 0.375rem 0.6rem;
+    padding: 0.375rem 2.25rem 0.375rem 0.75rem;
     -moz-padding-start: calc(0.75rem - 3px);
-    font-family: inherit;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -260,8 +200,11 @@ input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    box-sizing: border-box;
     word-wrap: normal;
     text-transform: none;
+    margin: 0;
+    font-family: inherit;
 
     &:focus {
         border-color: #86b7fe;
@@ -273,38 +216,53 @@ input {
         color: transparent;
         text-shadow: 0 0 0 #212529;
     }
-
-    &:disabled {
-        background-color: #e9ecef;
-    }
 }
 
 
 .form-check {
-    margin: .35em 0;
+    display: block;
+    min-height: 1.5rem;
+    padding-left: 1.5em;
+    margin: 0.125em 0;
 }
 
 .form-check-input {
-    font-size: 1rem;
+    float: left;
+    margin: 0;
+    margin-top: 0.25em;
+    margin-left: -1.5em;
     width: 1em;
     height: 1em;
-    margin: .22em .2em .3em 0;
     vertical-align: top;
     background-color: #fff;
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    border: 1px solid rgba(0,0,0,.25);
+    border: 1px solid rgba(0, 0, 0, 0.25);
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     -webkit-print-color-adjust: exact;
     color-adjust: exact;
     border-radius: .25em;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
 
     &:checked {
+        background-color: #0d6efd;
         border-color: #0d6efd;
-        background: #0d6efd url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
+    }
+
+    &:active {
+        filter: brightness(90%);
+    }
+
+    &:focus {
+        border-color: #86b7fe;
+        outline: 0;
+        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
     }
 }
 
@@ -325,20 +283,19 @@ input {
 
 .avgqty {
     display: flex;
-    box-sizing: border-box;
+    //gap: 20px; // TODO: use at some point
     margin-bottom: .8rem;
 }
 
 .field--avg {
-    margin-right: 2.5%;
-    flex: 1 1 0px
+    padding-right: 10px;
+    flex: 1 1 0%;
 }
 
 .field--qty {
-    margin-left: 2.5%;
-    flex: 1 1 0px
+    padding-left: 10px;
+    flex: 1 1 0%;
 }
-
 
 .responsive {
     overflow-x: auto;
@@ -397,7 +354,7 @@ td {
 
 
 .th--psp {
-    width: 178px;
+    width: 11rem;
     padding-left: 1rem;
     text-align: left;
 }
@@ -429,7 +386,7 @@ td {
 }
 
 .td--psp {
-    font-size: 13px;
+    font-size: .82rem;
     padding: 3px 0 0 16px;
     text-align: left;
 }
